Fix: iPhone pictures  squashed... fix spacing so page is scrollable...

--- a/src/app/teach/teach.style.css
+++ b/src/app/teach/teach.style.css
@@ -24,7 +24,7 @@ teach-details {
 
 .teach-details-container {
 
-  display: flex;
+  /*display: flex;*/
   flex-direction: column;
 }
 
